2012-10-31 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_GraphRoutines.C : merge functions return void *
	* src/STAT_GraphRoutines.C : statNodeToText return strdup

2012-10-24 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT.h src/STAT_FrontEnd.C, src/STAT_BackEnd.C
	src/STAT_FilterDefinitions.C : define statOutFp in .C files

2012-10-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : use getpwuid() instead of getlogin()	

2012-10-18 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : fixed bug in thread stack traces
	* src/STAT_FrontEnd.C : fixed memory bug in receiveStackTraces
	* config/x_ac_debuglibs.m4 : added additional StackWalker version support

2012-08-20 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.[C,h], src/STAT_BackEnd.[C,h], scripts/STATGUI.py,
	doc/src/* configure.ac src/STAT.[i,C] : added prototype feature to 
	gather Python-level stack traces (--enable-python-debug)
	* src/MRNetSymbolReader.h, src/STAT_FrontEnd.[C,h],
	src/STAT_BackEnd.[C,h]: updated FastGlobalFileStat->FastGlobalFileStatus

2012-08-20 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/* : updated man pages and command references to lowercase
	versions
	* doc/src/stat_changelog.sgml : new documentation section to highlight
	changes

2012-08-10 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added menuitem to modify select preferences
	* scripts/STATview.py, scripts/STATGUI.py : added/moved
	options/preferences to STATview.py
	* scripts/STATview.py : option to modify truncation of nodes in front or
	back and to set max length

2012-08-09 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added ability to cut based on a regex

2012-07-30 Gregory L. Lee <lee218@llnl.gov>
	* configure.ac, config/*.m4 : added ability to disable rpath (on by
	default)

2012-07-24 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.[h,C], src/STAT_GraphRoutines.[h,C] : moved
	createRootedGraph and string_hash (renamed to statStringHash) to 
	STAT_GraphRoutines